--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,14 +13,13 @@
       novalidate
     >
       <div class="form-group">
-        <label for="username">Email</label>
+        <label for="username">Username</label>
         <input
           type="text"
           class="form-control"
           name="username"
           [(ngModel)]="form.username"
           required
-          email
           #username="ngModel"
         />
         <div
@@ -28,10 +27,10 @@
           role="alert"
           *ngIf="username.errors && f.submitted"
         >
-          Email is required
+          Username is required!
         </div>
       </div>
-      <div class="formGroup">
+      <div class="form-group">
         <label for="password">Password</label>
         <input
           type="password"
@@ -48,7 +47,9 @@
           *ngIf="password.errors && f.submitted"
         >
           <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minLength">Password must be at least 6 characters</div>
+          <div *ngIf="password.errors.minlength">
+            Password must be at least 6 characters
+          </div>
         </div>
       </div>
       <div class="form-group">
@@ -58,16 +59,17 @@
       </div>
       <div class="form-group">
         <div
-        class="alert alert-danger"
-        role="alert"
-        *ngIf="f.submitted && isLoginFailed"
+          class="alert alert-danger"
+          role="alert"
+          *ngIf="f.submitted && isLoginFailed"
         >
-          Login failed: {{errorMessage}}
+          Login failed: {{ errorMessage }}
         </div>
       </div>
     </form>
+
     <div class="alert alert-success" *ngIf="isLoggedIn">
-      Logged in as {{roles}}
+      Logged in as {{ roles }}.
     </div>
   </div>
 </div>
