--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,10 +19,10 @@
 
     <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
       <li class="nav-item">
-        <a href="/register" class="nav-link" routerLink="register">Sign up</a>
+        <a href="/auth/reg" class="nav-link" routerLink="register">Sign up</a>
       </li>
       <li class="nav-item">
-        <a href="/login" class="nav-link" routerLink="login">Sign in</a>
+        <a href="/auth/login" class="nav-link" routerLink="login">Sign in</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
