--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,17 @@
     <a href="#" class="navbar-brand">Sergeyev.tech</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
       <li class="nav-item">
-        <a href="/home" class="nav-link" routerLink="home">Home</a>
+        <a href="/" class="nav-link" routerLink="home">Home</a>
       </li>
       <li class="nav-item" *ngIf="showAdminBoard">
-        <a href="/admin" class="nav-link" routerLink="admin">Admin board</a>
+        <a href="/admins" class="nav-link" routerLink="admin">Role management</a>
       </li>
       <li class="nav-item" *ngIf="showOperatorBoard">
-        <a href="/operator" class="nav-link" routerLink="operator">Operator board</a>
+        <a href="/operators" class="nav-link" routerLink="operator">Pending requests</a>
       </li>
       <li class="nav-item">
-        <a href="/user" class="nav-link"
-           *ngIf="isLoggedIn" routerLink="user">User board</a>
+        <a href="/users" class="nav-link"
+           *ngIf="showUserBoard" routerLink="user">My requests</a>
       </li>
     </ul>
 
@@ -27,7 +27,7 @@
     </ul>
     <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
       <li class="nav-item">
-        <a href="/profile" class="nav-link" routerLink="profile">{{username}}</a>
+        <a href="/profile" class="nav-link" routerLink="profile">My profile</a> <!--or {{username}}-->
       </li>
       <li class="nav-item">
         <a href class="nav-link" (click)="logout()">Logout</a>
