--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,6 +17,7 @@
         <input
           type="text"
           class="form-control"
+          id="username"
           name="username"
           [(ngModel)]="form.username"
           required
@@ -27,7 +28,7 @@
           role="alert"
           *ngIf="username.errors && f.submitted"
         >
-          Username is required!
+          Username is required
         </div>
       </div>
       <div class="form-group">
@@ -35,6 +36,7 @@
         <input
           type="password"
           class="form-control"
+          id="password"
           name="password"
           [(ngModel)]="form.password"
           required
