--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,17 +1,17 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
   <header class="jumbotron">
     <h3>
-      <strong>{{ currentUser }}</strong> profile
+      <strong>{{ currentUser.username }}</strong> profile
     </h3>
   </header>
-  <p>
+  <!--<p>
     <strong>Token:</strong>
-    {{ currentUser.accessToken.substring(0, 20) }}...
-    {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20)}}
-  </p>
+    {{ currentUser.token.substring(0, 20) }} ...
+    {{ currentUser.token.substr(currentUser.token.length - 20)}}
+  </p>-->
   <p>
-    <strong>Email:</strong>
-    {{ currentUser.email}}
+    <strong>Your email for login:</strong>
+    {{ currentUser.username }}
   </p>
   <strong>Roles:</strong>
   <ul>
